@@ -1,3 +1,13 @@
+2009-07-14 Harald Oehlmann  <oehhar@users.sourceforge.net>
+
+	* dynhelp.tcl (DynamicHelp::_leave_info et al) issues:
+	- menu help sometimes not cleared when clicking off-window (unix)
+	- "-helpcmd" available also when dynamichelp is included in another
+	  widget.
+	- given "-helpcmd" always called at global scope.
+	- Protect against multiple calls of <Leave> event.
+	[Patch 2820851] by Koen Danckaert
+
 2009-07-07 Harald Oehlmann  <oehhar@users.sourceforge.net>
 
 	* combobox.tcl (ComboBox::_select) Do not export selection if
